--- a/Billow.html
+++ b/Billow.html
@@ -26,10 +26,10 @@
       <p>
       <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" ></a>
       <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research
-      <br><strong>Tools:</strong> Figma, Invision, USabilityHub
-      <br><strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
-      <br>User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
-      <br>Design
+      <strong>Tools:</strong> Figma, Invision, USabilityHub
+      <strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
+      User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
+      Design
       <br>
       <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
     <hr class="section-divider">
@@ -38,24 +38,24 @@
     <section>
       <h2>Problem</h2>
       <p>Current cloud storage services don’t offer a seamless or intuitive user
-      <br> experience. Non-tech users are not considered, which results in hesitation
-      <br> in using cloud storage services. Cloud storage solutions fail to reach
-      <br> their full potential by not looking deeper into their capabilities and
-      <br> exploring features like collaboration, link storage, organization, and
-      <br> customization that optimize the collaborative process.
+      experience. Non-tech users are not considered, which results in hesitation
+      in using cloud storage services. Cloud storage solutions fail to reach
+      their full potential by not looking deeper into their capabilities and
+      exploring features like collaboration, link storage, organization, and
+      customization that optimize the collaborative process.
       <hr class="section-divider">
     </section>
     <section>
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
       <p>Billow is a cloud storage service that offers users the ability to
-      <br> customize content organization by providing an initial folder setup
-        <br> based on their needs as individuals, freelancers, or business teams. Users
-        <br> are also able to create content like documents, sheets and notes, organize
-        <br> content, uploading files as well as sharing and collaborating in real-time. These
-        <br> solutions reduce the drag for users of having to figure out how to organize
-        <br> their files and content as well as reducing the amount of external communication
-        <br> with real-time collaboration tools.
+      customize content organization by providing an initial folder setup
+      based on their needs as individuals, freelancers, or business teams. Users
+      are also able to create content like documents, sheets and notes, organize
+      content, uploading files as well as sharing and collaborating in real-time. These
+      solutions reduce the drag for users of having to figure out how to organize
+      their files and content as well as reducing the amount of external communication
+       with real-time collaboration tools.
         <hr class="section-divider">
     </section>
 
@@ -75,46 +75,45 @@
     <section>
       <h2>User Personas</h2>
       <p>Based on the user surveys, I was able to identify two types of users;
-      <br>the non-user who’s hesitant about using cloud storage because it seems
-      <br>overwhelming and the active user who is interested in trying out a new
-      <br>service that meets her needs.
+      the non-user who’s hesitant about using cloud storage because it seems
+      overwhelming and the active user who is interested in trying out a new
+      service that meets her needs.
       <br>
       <img class="user-persona" src="images/mariap.png" alt="Maria User Persona" ></a>
       <p><strong>Maria P.</strong>
-      <br> Ux Designer
-      <br> Age: 27/Location: Seattle, WA
-      <br> a María is a UX designer based in Seattle,
-      <br>Washington. She splits her time between working
-      <br>at a design studio full time and developing her
-      <br>personal project which is related to altering
-      <br>clothing and sustainability.As a UX enthusiast,
-      <br>she is always open to trying out new products
-      <br>especially if they will meet her needs.
+      Ux Designer
+      Age: 27/Location: Seattle, WA
+      a María is a UX designer based in Seattle,
+      Washington. She splits her time between working
+      at a design studio full time and developing her
+      personal project which is related to altering
+      clothing and sustainability.As a UX enthusiast,
+      she is always open to trying out new products
+      especially if they will meet her needs.
       <br>
     </p>
       <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
       <p><strong>Luis R.</strong>
-      <br>Ux Designer
-      <br>Age: 31/Location: Brooklyn, NY
-      <br>Luis has been a copywriter for 6+ years and is
-      <br>currently based in New York. Outside of work,
-      <br>he’s a music enthusiasts and enjoys going to
-      <br>concerts frequently. Luis is a creature of habits
-      <br>and can be a bit hesitant to using new services
-      <br>like cloud storage but he is open to trying a
-      <br>service out if it’s user friendly and easy to
-      <br>navigate.
+      Ux Designer
+      Age: 31/Location: Brooklyn, NY
+      Luis has been a copywriter for 6+ years and is
+      currently based in New York. Outside of work,
+      he’s a music enthusiasts and enjoys going to
+      concerts frequently. Luis is a creature of habits
+      and can be a bit hesitant to using new services
+      like cloud storage but he is open to trying a
+      service out if it’s user friendly and easy to
+    navigate.
     </p>
       <hr class="section-divider">
     </section>
     <section>
       <h2>Information Architecture</h2>
       <h3>User Flows & User Stories </h3>
-      <p>For the user stories, I focused on what survey participants and personas
-      <br>prioritized. I compiled a list of high and medium priorities to reach
-      <br>the minimum viable product. Based on the user stories, I created user
-      <br>flows to show how users will complete these tasks.
-    <br>
+      For the user stories, I focused on what survey participants and personas
+      prioritized. I compiled a list of high and medium priorities to reach
+      the minimum viable product. Based on the user stories, I created user
+      flows to show how users will complete these tasks.
   </p>
   <table>
   <tr>
@@ -177,13 +176,13 @@
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
       <img class="competitor" src="images/evernote.png" alt="Evernote" >
       <p>After completing this analysis, I realized that each of these apps has different advantages according
-        <br> to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
-        <br> all of these contents, google drive seems to be at the top. For users looking for more of a project management
-        <br> tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
-        <br> and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
-        <br> Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
-        <br> a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
-        <br> file organization, collaboration and sharing options, security, and creating documents.
+        to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
+        all of these contents, google drive seems to be at the top. For users looking for more of a project management
+        tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
+        and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
+        Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
+        a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
+        file organization, collaboration and sharing options, security, and creating documents.
       </p>
         <hr class="section-divider">
     </section>
@@ -193,18 +192,18 @@
     <img class="wireframes" src="images/wireframesketches.png" alt="Billow Wireframe Sketches" >
     <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
     <p>
-    <br> In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
-    <br> was clear that I needed to create a navigation that was easy to use for active users and non-users
-    <br> who might not be as tech-savvy or might feel overwhelmed with trying new systems.
-    <br><a href="">See Wireframes</a>
+    In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
+    was clear that I needed to create a navigation that was easy to use for active users and non-users
+    who might not be as tech-savvy or might feel overwhelmed with trying new systems.
+    <a href="">See Wireframes</a>
   </p>
   <h3>Usability Testing Round 1</h3>
   <p>This is where the iteration process began, the following are the key takeaways from this round:</p>
   <p>- Main CTA on homepage must be revised it should probably make reference to each of the
-  <br>  membership tiers or to “learn more” or even “sign up now” so that users are not confused
-  <br>  or resist signing up because they assume they will be charged</p>
+  membership tiers or to “learn more” or even “sign up now” so that users are not confused
+   or resist signing up because they assume they will be charged</p>
 <p>- Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
-  <br>confusion</p>
+  confusion</p>
   <p>- Adding file/folder information on the dashboard (list view) as suggested by Manuel</p>
   <hr class="section-divider">
   </section>
@@ -212,20 +211,20 @@
   <h2>Designing the logo to evoke a feeling of Ease </h2>
   <h3>The brand</h3>
   <p>The brand name stands to represent a cloud but also how this service flows for users as far as it’s features of
-  <br>  creating, collaborating and sharing. The brand will be simple, light, somewhat playful and relatable. It will
-  <br>  also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
-  <br>  and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
+   creating, collaborating and sharing. The brand will be simple, light, somewhat playful and relatable. It will
+   also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
+   and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
 </p>
   <img src="images/logosketches.png" alt="Billow Logo Sketches">
   <img src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
   <img src="images/billowbw.png" alt="Billow Black And White Logo">
   <h3>Color Palette & Style Guide</h3>
   <p>Based on the mood, the brand assets where created. The logo
-  <br>  icon is a reinterpretation of a cloud to continue to evoke that
-  <br>  feeling of calmness and simplicity. For the logo, I chose a gradient
-  <br>  using the lighter blue to light pink. This same gradient is used subtly
-  <br>  in some elements like icons and banners. The main accent color is the
-  <br>  darker blue which creates balance and harmony with the rest of the shades.</p>
+   icon is a reinterpretation of a cloud to continue to evoke that
+   feeling of calmness and simplicity. For the logo, I chose a gradient
+   using the lighter blue to light pink. This same gradient is used subtly
+   in some elements like icons and banners. The main accent color is the
+   darker blue which creates balance and harmony with the rest of the shades.</p>
   <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
   <br>
   <img src="images/billow-brand.png" alt="Billow Brand">
@@ -234,24 +233,24 @@
 <section>
   <h2>Hi-Fi MockuPS</h2>
   <p>Following the branding, requirements and user flows,
-  <br>  wireframes transformed into hi-fi mockups focused on the
-  <br>  desktop experience. I considered user feedback and design
-  <br>  patterns as well to create an interface that was easy to use for
-  <br>  both tiers of user personas.
+   wireframes transformed into hi-fi mockups focused on the
+   desktop experience. I considered user feedback and design
+   patterns as well to create an interface that was easy to use for
+   both tiers of user personas.
 </p>
   <a href="#">See Mockups</a>
   <h3>Usability testing 2.0</h3>
   <p>After implementing the branding and initial changes based on the
-  <br>  first round of user testing and adding the branding, I focused this
-  <br>  test on similar tasks to make sure that users understand and are
-  <br>  able to use the app seamlessly.</p>
+   first round of user testing and adding the branding, I focused this
+   test on similar tasks to make sure that users understand and are
+   able to use the app seamlessly.</p>
   <p>Key takeaways:</p>
   <p>- Change colors on bottom CTA on the homepage so they are easier
-  <br>to read</p>
+  to read</p>
   <p>- Add icons or some text on the first enrollment screen so that users
-    <br> understand what choosing a free account versus a paid one entails.</p>
+  understand what choosing a free account versus a paid one entails.</p>
   <p>- Adding the option to see “date created” on the list view of the
-    <br>dashboard</p>
+  dashboard</p>
   <p>- Revise link sharing options on sharing screen
 </p>
 <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
@@ -274,14 +273,14 @@
 <a href="https://invis.io/V5V9M8AMKZ9">Check out the prototype</a>
   <h3>Takeaways</h3>
   <p>Creating this application taught me the importance of testing and prioritizing user’s needs and feedback
-  <br> rather than relying on intuition. This lesson came across multiple times in the visual design phase,
-  <br>preference test and last round of user testing. Aside from user feedback, I also learned the importance
-  <br> of following guidelines and requirements in design as well as staying up to date when it comes to design
-  <br>patterns and best practices. In the design phase, I had some doubts as far as the possibility of creating
-  <br> a product that users could easily relate to and felt comfortable using. One of my biggest surprises was
-  <br>definitely that even those who are hesitant or not inclined to use new technologies were able to
-  <br>understand and use the app without major issues. Lastly, I learned the importance of focusing on key
-  <br>screens first to ensure that the user’s frustrations and key needs are prioritized.
+   rather than relying on intuition. This lesson came across multiple times in the visual design phase,
+  preference test and last round of user testing. Aside from user feedback, I also learned the importance
+  of following guidelines and requirements in design as well as staying up to date when it comes to design
+  patterns and best practices. In the design phase, I had some doubts as far as the possibility of creating
+  a product that users could easily relate to and felt comfortable using. One of my biggest surprises was
+  definitely that even those who are hesitant or not inclined to use new technologies were able to
+  understand and use the app without major issues. Lastly, I learned the importance of focusing on key
+  screens first to ensure that the user’s frustrations and key needs are prioritized.
 </p>
   <h3></h3>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Back To Top</button>
