--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
 <body>
   <div class= "container">
   <section>
-    <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
+    <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
     <a class="active" href="Index.html">Work</a>
     <a href="About.html">About</a>
