--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     </section>
 
     <section class="main-banner">
-      <img class="icon" src="images/bauhaus graphic.png" alt="bauhaus icon" align="right">
+      <img class="icon" src="images/bauhaus-graphic.png" alt="bauhaus icon" align="right">
       <h1> Hi, I’M Julianna a UX Designer
     <br> Based in Brooklyn, New York </h1>
     </section>
@@ -47,14 +47,12 @@
       <a href="BusyBus.html">View Project</a>
     </section>
 
-    <section class="footer">
       <footer>
         <hr>
     <a href="Contact.html">CONTACT</a>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
-    </section>
 </div>
   </body>
 </html>
