--- a/About.html
+++ b/About.html
@@ -24,10 +24,12 @@
   <section>
     <section class="main-banner">
       <h2> I'm Julianna, a UX Designer committed
-    <br> to creating products that will help underrepresented communities thrive. </h2>
+        to creating products that will help
+        underrepresented communities thrive. </h2>
+        <br>
     <hr class= "section-divider">
   </section>
-  <section>
+  <section class="bio">
     <h2> THE JOURNEY </h2>
     <p> My design career is rooted in curiosity. As a child, I was always interested in
       the why of things and solving problems so when we got our first computer
@@ -66,6 +68,7 @@
   present a product, there had to be more there. So the quest for a UX design
   program began.
 </p>
+<br>
 <h3> WHY UX?</h3>
 <p> UX design is the perfect combination of my passion for solving problems
   and my ability to empathize with people. I was 100% committed to making
