--- a/Billow.html
+++ b/Billow.html
@@ -11,8 +11,7 @@
 
   <body>
     <div class= "container">
-    <section>
-      <p>
+    <section class="main-menu">
       <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a></p>
       <nav class="topnav">
       <a href="Index.html">Work</a>
@@ -21,10 +20,10 @@
       </nav>
     </section>
 
-    <section class="billow-intro">
+    <section class="billow-banner">
+      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" ></a>
       <h1> Billow </h1>
       <p>
-      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" ></a>
       <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research
       <strong>Tools:</strong> Figma, Invision, USabilityHub
       <strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
@@ -172,7 +171,7 @@
     </section>
     <section>
       <h3>Competitive Analysis</h3>
-      <img class="competitor" src="images/airtable.png" alt="Airtable Logo" ><
+      <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
       <img class="competitor" src="images/evernote.png" alt="Evernote" >
       <p>After completing this analysis, I realized that each of these apps has different advantages according
