--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class= "container">
-    <section>
+    <section class="main-menu">
       <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
       <nav class="topnav">
       <a class="active" href="Index.html">Work</a>
@@ -23,8 +23,10 @@
 
     <section class="main-banner">
       <img class="icon" src="images/bauhaus-graphic.png" alt="bauhaus icon" align="right">
+    <div class="intro-text">
       <h1> Hi, I’M Julianna a UX Designer
     <br> Based in Brooklyn, New York </h1>
+  </div>
     </section>
 
     <section class="projects">
@@ -32,24 +34,33 @@
     </section>
 
     <section class="billow-project">
-      <aside>
-      <i class= "billow-image"><img src=images/billow-image.png alt="billow App"></i>
+      <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
+      <div class= "b1-container">
       <h3>Billow</h3>
-      <p>UX Design, Visual design, user research & testing<p>
-        <a href="Billow.html">View Case Study</a>
-    </aside>
+      <p>UX Design, Visual design, user research & testing</p>
+      <a href="Billow.html">View Case Study</a>
+      </div>
+      <div class= "b2-container">
+      <i class= "billow-image"><img src=images/billow-image.png alt="billow App"></i>
+      </div>
     </section>
 
     <section class="busybus-project">
+      <i class="right-square"><img src="images/right-rectangle.png" alt=""></i>
+      <div class="b3-container">
+        <h3>BusyBus</h3>
+        <p>UX Design, Visual design, user research & testing</p>
+        <a href="BusyBus.html">View Project</a>
+      </div>
+      <div class="b4-container">
       <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
-      <h3>BusyBus</h3>
-      <p>UX Design, Visual design, user research & testing</p>
-      <a href="BusyBus.html">View Project</a>
+      </div>
+
     </section>
 
       <footer>
         <hr>
-    <a href="Contact.html">CONTACT</a>
+    <a class="Contact" href="Contact.html">CONTACT</a>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
