--- a/Billow.html
+++ b/Billow.html
@@ -21,30 +21,37 @@
     </section>
 
     <section class="billow-banner">
-      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" ></a>
-      <h1> Billow </h1>
-      <p>
-      <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research
-      <strong>Tools:</strong> Figma, Invision, USabilityHub
-      <strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
-      User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
-      Design
-      <br>
-      <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
-    <hr class="section-divider">
+      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" >
+      <div class="b-container">
+        <h1> Billow </h1>
+        <p>
+        <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research </p>
+        <p><strong>Tools:</strong> Figma, Invision, USabilityHub</p>
+        <p><strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
+        User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
+        Design </p>
+        <br>
+        <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
+      </div>
+    <hr class="section-divider2">
     </section>
 
-    <section>
+    <section class="problem-banner">
+      <div class="p1-container">
       <h2>Problem</h2>
+      </div>
+    <div class="p2-container">
       <p>Current cloud storage services don’t offer a seamless or intuitive user
       experience. Non-tech users are not considered, which results in hesitation
       in using cloud storage services. Cloud storage solutions fail to reach
       their full potential by not looking deeper into their capabilities and
       exploring features like collaboration, link storage, organization, and
       customization that optimize the collaborative process.
-      <hr class="section-divider">
+    </div>
+    <hr class="section-divider2">
     </section>
-    <section>
+
+    <section class "solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
       <p>Billow is a cloud storage service that offers users the ability to
@@ -55,20 +62,19 @@
       solutions reduce the drag for users of having to figure out how to organize
       their files and content as well as reducing the amount of external communication
        with real-time collaboration tools.
-        <hr class="section-divider">
+        <hr class="section-divider2">
     </section>
 
     <section>
       <h2>Research</h2>
       <h3>User Survey</h3>
-      <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
       <p>The solutions I came up with are based on the insights gathered on the
-      <br> user surveys where I learned if participants use or don’t use cloud storage,
-      <br> why to use it, what their frustrations, which features they prioritize
-      <br> are and what would motivate them to use it.
-      <br>
-      <br>The survey was completed by 19 participants.
-      <br>View results
+      user surveys where I learned if participants use or don’t use cloud storage,
+      why to use it, what their frustrations, which features they prioritize
+      are and what would motivate them to use it.
+      The survey was completed by 19 participants.
+      <a href="#">View results</a></p>
+      <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
       <hr class="section-divider">
     </section>
     <section>
