--- a/Billow.html
+++ b/Billow.html
@@ -51,9 +51,10 @@
     <hr class="section-divider2">
     </section>
 
-    <section class "solution">
+    <section class="solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
+      <div class= "solution-p"
       <p>Billow is a cloud storage service that offers users the ability to
       customize content organization by providing an initial folder setup
       based on their needs as individuals, freelancers, or business teams. Users
@@ -62,6 +63,7 @@
       solutions reduce the drag for users of having to figure out how to organize
       their files and content as well as reducing the amount of external communication
        with real-time collaboration tools.
+     </div>
         <hr class="section-divider2">
     </section>
 
