--- a/Billow.html
+++ b/Billow.html
@@ -51,6 +51,7 @@
     <hr class="section-divider2">
     </section>
 
+
     <section class="solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
@@ -67,15 +68,15 @@
         <hr class="section-divider2">
     </section>
 
-    <section>
+    <section class="user-research">
       <h2>Research</h2>
       <h3>User Survey</h3>
       <p>The solutions I came up with are based on the insights gathered on the
       user surveys where I learned if participants use or don’t use cloud storage,
       why to use it, what their frustrations, which features they prioritize
       are and what would motivate them to use it.
-      The survey was completed by 19 participants.
-      <a href="#">View results</a></p>
+      The survey was completed by 19 participants.</p>
+      <p><a href="#">View results</a></p>
       <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
       <hr class="section-divider">
     </section>
@@ -294,7 +295,12 @@
 </section>
       <footer>
         <hr>
-    <a href="Contact.html">CONTACT</a>
+        <section>
+          <a class="Contact" href="Contact.html">CONTACT</a>
+          <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+          <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+          <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+        </section>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
