--- a/BusyBus.html
+++ b/BusyBus.html
@@ -19,6 +19,16 @@
       <a href="#contact">Contact</a>
       </nav>
     </section>
-
+    <footer>
+      <hr>
+      <section>
+        <a class="Contact" href="Contact.html">CONTACT</a>
+        <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+        <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+        <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+      </section>
+    <!-- Copyright -->
+  <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+    </footer>
   </body>
 </html>
